--- a/index.html
+++ b/index.html
@@ -2,27 +2,46 @@
   <title>پنل اطلاعات کمپرسورها</title>
   <link rel="stylesheet" href="style.css" />
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
 </head>
 
 <body>
-  <div id="inputs">
-    <span>
-      <p>Select your desired <strong>Air Demand</strong> range</p>
-      <select id="select-demand">
-        <option value="" disabled selected>Air Demand</option>
-      </select>
-    </span>
-    <span>
-      <p>Select your desired <strong>Air Pressure</strong> value</p>
-      <select id="select-pressure">
-        <option value="" disabled selected>Air Pressure</option>
-      </select>
-    </span>
-  </div>
-  <div id="outputs">
-    <p class="output-title">Suggested Compressor Models</p>
-    <ul id="result-frame"></ul>
+  <!-- left column -->
+  <div class="container">
+    <div id="inputs">
+      <span>
+        <label for="pname">Project Title:</label>
+        <input type="text" id="pname" name="pname" />
+      </span>
+      <span>
+        <label for="tnumber">Phone Number:</label>
+        <input type="text" id="tnumber" name="tnumber" />
+      </span>
+      <span>
+        <label for="address">Address:</label>
+        <input type="text-" id="address" name="address" />
+      </span>
+      <span>
+        <p>Select your desired <span>Air Demand</span> range:</p>
+        <select id="select-demand" onchange="handleDemandChange(e)">
+          <option value="" disabled selected>All</option>
+        </select>
+      </span>
+      <span>
+        <p>Select your desired <span>Air Pressure</span> value:</p>
+        <select id="select-pressure" onchange="handlePressureChange(e)">
+          <option value="" disabled selected>All</option>
+        </select>
+      </span>
+      <button id="generatePDF" onclick="pdfReq()">
+        Save Project Information
+      </button>
+    </div>
+    <!-- right column -->
+    <div id="outputs">
+      <p class="output-title">Suggested Compressor Models</p>
+      <ul id="result-frame"></ul>
+    </div>
   </div>
   <script src="script.js" type="text/javascript"></script>
 </body>
