--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <head>
-  <title>پنل اطلاعات کمپرسورها</title>
+  <title>Compressor Database</title>
   <link rel="stylesheet" href="style.css" />
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
 </head>
 
