improved web metrics

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <head>
   <title>Compressor Database</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.debug.js"
+    defer
+  ></script>
 </head>
 
 <body>
