--- a/index.html
+++ b/index.html
@@ -22,19 +22,18 @@
       </span>
       <span>
         <label for="address">Address:</label>
-        <input type="text-" id="address" name="address" />
+        <input type="text" id="address" name="address" />
       </span>
       <span>
         <p>Select your desired <span>Air Demand</span> range:</p>
-        <select id="select-demand">
-          <option value="" disabled selected>All</option>
-        </select>
+        <input type="number" id="select-demand" name="select-demand" />
       </span>
       <span>
         <p>Select your desired <span>Air Pressure</span> value:</p>
-        <select id="select-pressure">
-          <option value="" disabled selected>All</option>
-        </select>
+        <input type="number" id="select-pressure" name="select-pressure" />
+      </span>
+      <span>
+        <p>You have selected: <span id="selected-label">no model yet!</span></p>
       </span>
       <button id="generatePDF" onclick="pdfReq()">
         Save Project Information
